# treeport

./: .gitignore  Cargo.toml  README.md  example.toml  flake.nix
examples/: git-status.sh  git-treeport.toml
nix/: formatting.nix  rust.nix
src/: config.rs  main.rs  report.rs  walk.rs
tests/: cli.rs
